# agent-recall

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
docs/agents/: issue-tracker.md
src/: cli.rs  config.rs  indexer.rs  lib.rs  log_importer.rs  main.rs  memory.rs  output.rs  parser.rs  redact.rs  refresh_lock.rs  store.rs
src/commands/: doctor.rs  index.rs  kind.rs  logs.rs  memory.rs  mod.rs  pins.rs  recent.rs  search.rs  watch.rs
src/store/: tests.rs
tests/: cli.rs  search_quality.rs
