[package]
name = "agent-recall"
version = "0.1.3"
edition = "2021"
description = "Local search and recall for Codex, OMP, Pi, and Claude session archives, with optional Codex log import"
license = "MIT"
readme = "README.md"
repository = "https://github.com/HanifCarroll/agent-recall"
homepage = "https://github.com/HanifCarroll/agent-recall"
keywords = ["agent", "search", "jsonl", "sqlite", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "=4.5.23", features = ["derive"] }
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
